<resources>
    <string name="app_name">Abramovich_Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="card_image">card image</string>

    <string name="name_placeholder">Name: %1$s</string>
    <string name="class_placeholder">Class: %1$s</string>
    <string name="coast_placeholder">Coast: %1$s</string>
    <string name="description_placeholder">Description: %1$s</string>
    <string name="exception">Exception</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="coast">Coast</string>
    <string name="cclass">Class</string>
    <string name="details">Details</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
</resources>