<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/default_margin">

        <ImageView
            android:id="@+id/btn_close"
            android:src="@drawable/ic_close"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"/>

        <TextView
            android:id="@+id/text_title"
            style="@style/text_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/sort_by"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_close" />


        <RadioGroup
            android:id="@+id/rg_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title">

            <RadioButton
                android:id="@+id/rb_accending"
                style="@style/radio_button"
                android:text="@string/ascending" />

            <RadioButton
                android:id="@+id/rb_descending"
                style="@style/radio_button"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/descending" />
        </RadioGroup>

        <View
            android:id="@+id/view_delimeter"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/default_margin"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_direction" />

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_direction">

            <RadioButton
                android:id="@+id/rb_name"
                style="@style/radio_button"
                android:text="@string/name" />

            <RadioButton
                android:id="@+id/rb_coast"
                style="@style/radio_button"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/coast" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>